# cfe-reactify-django

./: .dockerignore  Dockerfile  README.md  React_Setup.md  docker-compose.yml  main.py  pyproject.toml
docker/postgres/: init.sql
src/: requirements.txt  requirements_original.txt
src/posts/: apps.py
src/reactify/: settings.py  urls.py
src/reactify-ui/: package-lock.json  package.json
src/reactify-ui/src/: App.js  index.js
src/reactify-ui/src/posts/: PostCreate.js  PostInline.js  Posts.js
src/reactify/templates/: react.html
src/staticfiles/: service-worker.js
src/staticfiles/js/: reactify-django.ui.js
src/templates/: js.html
static-cdn-local/: service-worker.js
